--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head id="head">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Mingxuan(Ricky) Liu`s resume</title>
-  <link rel="icon" href="/animate_resume/images/favicon.png">
-  <link rel="stylesheet" href="styles/index.css">
+  <title>Mingxuan(Ricky) Liu's resume</title>
+  <link rel="icon" href="./images/favicon.png">
+  <link rel="stylesheet" href="/styles/index.scss">
 </head>
 <body>
 <div class="style-container">
@@ -17,8 +17,8 @@
 
 <div class="bottom-container">
   <a href="javascript:;" id="skip-btn"></a>
-  <a href="https://github.com/IamVeryDiao">GitHub</a>
+  <!-- <a href="https://github.com/rickysrepo">GitHub</a> -->
 </div>
 </body>
-<script src="scripts/index.js"></script>
+<script type="module" src="/scripts/index.js"></script>
 </html>
