--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head id="head">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Mingxuan(Ricky) Liu's resume</title>
-  <link rel="icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="/styles/index.scss">
-</head>
-<body>
-<div class="style-container">
-  <pre id="style-editor"></pre>
-</div>
-<div class="resume-container">
-  <pre id="resume-content"></pre>
-</div>
+  <head id="head">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Mingxuan(Ricky) Liu's resume</title>
+    <link rel="icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="/styles/index.scss" />
+  </head>
+  <body>
+    <div class="style-container">
+      <pre id="style-editor"></pre>
+    </div>
+    <div class="resume-container">
+      <pre id="resume-content"></pre>
+    </div>
 
-<div class="bottom-container">
-  <a href="javascript:;" id="skip-btn"></a>
-  <!-- <a href="https://github.com/rickysrepo">GitHub</a> -->
-</div>
-</body>
-<script type="module" src="/scripts/index.js"></script>
+    <div class="bottom-container">
+      <a href="javascript:;" id="skip-btn">skip</a>
+      <a href="https://github.com/rickysrepo">GitHub</a>
+    </div>
+  </body>
+  <script type="module" src="/scripts/index.js"></script>
 </html>
