--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="bottom-container">
-      <a href="javascript:;" id="skip-btn">skip</a>
+      <a href="javascript:;" id="skip-btn">Skip</a>
       <a href="https://github.com/rickysrepo">GitHub</a>
     </div>
   </body>
